package nl.suriani.validation.exercise.domain.sensor.events;

public record Version(String value) {
}
