@startuml

package domain/shared as ds {
  class DomainEvent
}

package shipment/events as she {
  class ShipmentReceived {
  }

  class ShipmentValidated {
  }

  class ShipmentNotValidated {
    -String reason (1..1)
  }

  class ShipmentValidationFailed {
    -String reason (1..1)
  }
}

package sensor/events as see {
  class SensorRegistered {}

  enum Version {
    -String value (1..1)
  }

  class FirmwareUpdateRequired {
    -UpdateType type (1..1)
    -Version version (1..1)
  }

  class FirmwareUpdateScheduled {
    -Version version (1..1)
    -FileName fileName (1..1)
  }

  class FirmwareUpdateNotScheduled {
      -Version version (1..1)
      -String reason (1..1)
    }

  class FirmwareUpdated {
    -Version version (1..1)
    -FileName fileName (1..1)
  }

  class FirmwareUpdateCancelled {
    -Version version (1..1)
    -FileName fileName (1..1)
  }

  class FirmwareUpdateFailed {
    -Version version (1..1)
    -FileName fileName (1..1)
    -String reason (1..1)
  }
  
  class ConfigurationUpdateRequired {
    -UpdateType type (1..1)
    -Version version (1..1)
  }

  class ConfigurationUpdateScheduled {
    -Version version (1..1)
    -FileName fileName (1..1)
  }

  class ConfigurationUpdateNotScheduled {
    -Version version (1..1)
    -String reason (1..1)
  }
  
  class ConfigurationUpdated {
    -Version version (1..1)
    -FileName fileName (1..1)
  }
  
  class ConfigurationUpdateCancelled {
    -Version version (1..1)
    -FileName fileName (1..1)
  }
  
  class ConfigurationUpdateFailed {
    -Version version (1..1)
    -FileName fileName (1..1)
    -String reason (1..1)
  }
}

she -- DomainEvent
see -- DomainEvent

@enduml